@@ -687,6 +687,11 @@ function &xml_to_data_input_method($hash, &$xml_array, &$hash_cache) {
 	while (list($field_name, $field_array) = each($fields_data_input_edit)) {
 		/* make sure this field exists in the xml array first */
 		if (isset($xml_array[$field_name])) {
+			/* fix issue with data input method importing and white spaces */
+			if ($field_name == "input_string") {
+				$xml_array[$field_name] = str_replace("><", "> <", $xml_array[$field_name]);
+			}
+
 			$save[$field_name] = addslashes(xml_character_decode($xml_array[$field_name]));
 		}
 	}
