@@ -10,6 +10,7 @@ Cacti CHANGELOG
 -bug#0000870: Change Graph Template: Template list not sorted
 -bug#0000882: Add "collapsable" brances in the graph trees view
 -bug#0000867: Ceanup poller.php and lib/poller.php
+-bug#0000885: When Exporting/Importing Data Input Methods, Space between arguments is removed
 -bug: Data Queries were not sorted properly during initial display.
 
 0.8.6i
